--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.14.0",
     "prompt-sync": "^4.2.0",
