--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cheerio": "^0.22.35",
+    "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
     "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
@@ -14,6 +17,7 @@
     "prompt-sync-history": "^1.0.1"
   },
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "nodemon": "^3.1.9"
   },
   "name": "rolsa_ui",
@@ -23,7 +27,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "watch": "concurrently \"tsc -p tsconfig.json --watch\" \"tsc -p tsconfig.tools.json --watch\""
   },
   "keywords": [],
   "author": "",
